Refactor phone update, agreements, and chat features
Introduced `usePhoneUpdate` hook for cleaner state and logic in the phone update flow. Enhanced agreement versioning to support auto-increment or manual versions. Removed redundant code comments and streamlined unused variables across various components and services.